# ruchy-book

./: .gitignore  .markdownlint-cli2.json  .paiml-display.yaml  .pmat-gates.toml  CLAUDE.md  Cargo.toml  DEBUGGER_RESEARCH_v3.149.0.md  GEMINI.md  INTEGRATION.md  Makefile  PUBLICATION_READINESS_FINAL_v1.20.0.md  PUBLICATION_READINESS_v1.20.0.md  QA_CHECKLIST.md  QUALITY_REPORT.md  README.md  README_SNIPPET.md  ROADMAP-v2.md  ROADMAP.md  SATD_AUDIT.md  SPRINT_11_FINAL_REPORT.md  TOOLS_VERIFICATION_REPORT.md  TOOLS_v1275_REPORT.md  a.out  book-examples.json  book.toml  compatibility-dashboard.html  deno.json  one_liner_tests.ruchy  oneliners.json  quality.json  roadmap.yaml  test-results.json  tests.json  v0.13.0_integration_update.md
.github/: pull_request_template.md
.ruchy/: score.toml
book/: ch01-00-getting-started.html  foreword.html  searchindex.js  title-page.html
docs/: 404.html  BENCHMARKING-PROVES-SUMMARY.md  BOOK-STATE-2025-11-02.md  COMPLETION-SUMMARY-2025-10-31.md  COMPREHENSIVE-TESTING-RESULTS-v3.194.0.md  DEVELOPMENT_WORKFLOW.md  GITHUB-ISSUE-TRANSPILER-GLOBAL-STATE.md  ISSUE-132-FIXED.md  ISSUE-132-STILL-BROKEN.md  ISSUE-132-VERIFICATION.md  ISSUE-134-FIXED.md  MULTI-TOOL-TESTING-COMPLETE.md  MULTI-TOOL-TESTING-RESULTS.md  PRE-COMMIT-GATES.md  PROJECT-STATUS-2025-11-03.md  REFACTORING_PROGRESS.md  REFACTORING_ROADMAP.md  REFACTORING_SUMMARY.md  ROADMAP-2025-10-30.md  ROADMAP-2025-10-31.md  ROADMAP-2025-11-02.md  RUCHY-PARSE-JSON-ISSUE.md  RUCHY-V3.177.0-VERIFICATION.md  RUCHY-V3.181.0-BENCHMARK-VERIFICATION.md  RUCHY-V3.181.0-VERIFICATION.md  print.html  (+153 more)
(+1280 files in other folders)
